SERVER-66031 rename must succeed on all shards when UUIDs provided for C2C