jstests/sharding/rename_sharded.js
@@ -237,4 +237,32 @@ const mongos = st.s0;
     }
 }
 
+// For C2C: rename of existing collection with correct uuid as argument must succeed
+// (Also creating target collection to test target UUID internal check)
+{
+    const dbName = 'testRenameToUnshardedCollectionWithSourceUUID';
+    const fromCollName = 'from';
+    const fromNs = dbName + '.' + fromCollName;
+    const toNs = dbName + '.to';
+    assert.commandWorked(
+        mongos.adminCommand({enablesharding: dbName, primaryShard: st.shard0.shardName}));
+    const fromColl = mongos.getCollection(fromNs);
+    fromColl.insert({a: 0});
+
+    const toColl = mongos.getCollection(toNs);
+    toColl.insert({b: 0});
+
+    const sourceUUID = assert.commandWorked(st.getDB(dbName).runCommand({listCollections: 1}))
+                           .cursor.firstBatch.find(c => c.name === fromCollName)
+                           .info.uuid;
+
+    // The command succeeds when the correct UUID is provided.
+    assert.commandWorked(mongos.adminCommand({
+        renameCollection: fromNs,
+        to: toNs,
+        dropTarget: true,
+        collectionUUID: sourceUUID,
+    }));
+}
+
 st.stop();
